--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -214,6 +214,7 @@ a {
 		align-items: center;
 		justify-content: space-between;
 		padding: 33px 0 10px;
+		gap: 20px;
 	}
 
 	&__menu {
@@ -640,7 +641,7 @@ a {
 			background: #FFFFFF;
 			border-radius: 15px;
 			padding: 26px 46px 26px 70px;
-			height: 524px;
+			min-height: 524px;
 			position: relative;
 			font-weight: 300;
 			font-size: 16px;
@@ -1295,7 +1296,7 @@ a {
 	}
 }
 
-@media screen and (max-width:1440px) {
+@media screen and (max-width:1439px) {
 	.med-center__img {
 		right: -5vw;
 	}
@@ -1319,7 +1320,7 @@ a {
 	}
 }
 
-@media screen and (max-width:1280px) {
+@media screen and (max-width:1279px) {
 	.intro {
 		&-title {
 			font-size: 42px;
@@ -1388,5 +1389,136 @@ a {
 			object-position: left;
 		}
 	}
+}
 
+@media screen and (max-width:1023px) {
+	.header__menu {
+		gap: 30px;
+	}
+
+	.feedback__content {
+		max-width: 780px;
+	}
+
+	.intro-img {
+		position: relative;
+		width: 47vw;
+		height: 538px;
+	}
+}
+
+@media screen and (max-width: 992px) {
+	.header__menu {
+		gap: 8px;
+	}
+
+	.feedback__content {
+		max-width: 780px;
+	}
+
+	.intro {
+		&-content {
+			margin: 75px 0 0;
+		}
+
+		&-img {
+			position: relative;
+			max-width: 700px;
+			width: 100%;
+			height: 538px;
+			margin: 0 auto;
+		}
+
+	}
+
+	.info {
+		&-countries {
+			padding: 20px 0;
+		}
+
+		&-numbers {
+			font-size: 60px;
+		}
+	}
+
+	.med-center__img {
+		display: none;
+	}
+
+	.stock {
+		margin-top: 83px;
+		padding-bottom: 83px;
+	}
+
+	.service-list {
+		grid-template-columns: 1fr;
+		gap: 23px;
+	}
+
+	.service-item-big {
+		padding: 26px 40px;
+		font-size: 16px;
+
+		.service-desc {
+			height: 540px;
+		}
+
+		.service-icon {
+			left: 20px;
+		}
+
+	}
+
+	.reference .desc {
+		max-width: 100%;
+		margin-bottom: 35px;
+
+		&:nth-last-child(1) {
+			margin-bottom: 35px;
+		}
+	}
+
+	.sing-bg,
+	.reference__img,
+	.stock__right {
+		display: none;
+	}
+
+	.equipment__item-big {
+		display: flex;
+		gap: 20px;
+		align-items: center;
+		background-size: cover;
+		margin-bottom: 30px;
+
+		.equipment-text {
+			max-height: 68px;
+			height: auto;
+		}
+	}
+
+	.equipment-icon-big {
+		margin-bottom: 0;
+	}
+
+	.equipment-text {
+		font-size: 14px;
+	}
+
+	.sing-form {
+		margin: 0 auto;
+	}
+
+	.sing-form::before {
+		left: 50%;
+		transform: translateX(-50%);
+	}
+
+	.prices__right {
+		gap: 20px;
+	}
+
+	.feedback__arrow {
+		display: none;
+	}
 }
