--- a/assets/template/page-header.html
+++ b/assets/template/page-header.html
@@ -82,10 +82,8 @@
         <div class="header__inner">
             <ul class="header__menu">
                 <li class="header__menu-item">
-                    <a href="#intro" class="header__menu-link">О центре</a>
+                    <a href="#info" class="header__menu-link">О центре</a>
                 </li>
-
-
                 <li class="header__menu-item">
                     <a href="#doctors" class="header__menu-link">Специалисты</a>
                 </li>
@@ -114,25 +112,25 @@
         <div class="header-mobile__menu-content">
             <ul class="header__menu">
                 <li class="header__menu-item">
-                    <a href="#" class="header__menu-link">О центре</a>
-                </li>
-                <li class="header__menu-item active">
-                    <a href="#" class="header__menu-link">Услуги</a>
+                    <a href="#info" class="header__menu-link">О центре</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="#" class="header__menu-link">Цены</a>
+                    <a href="#doctors" class="header__menu-link">Специалисты</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="#" class="header__menu-link">Специалисты</a>
+                    <a href="#service" class="header__menu-link">Услуги</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="#" class="header__menu-link">Акции</a>
+                    <a href="#stock" class="header__menu-link">Акции</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="#" class="header__menu-link">Отзывы</a>
+                    <a href="#prices" class="header__menu-link">Цены</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="#" class="header__menu-link">Контакты</a>
+                    <a href="#feedback" class="header__menu-link">Отзывы</a>
+                </li>
+                <li class="header__menu-item">
+                    <a href="#contact" class="header__menu-link">Контакты</a>
                 </li>
             </ul>
             <div class="header__contact">
