--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1416,6 +1416,67 @@ a {
 	}
 }
 
+
+.sing-right {
+	right: -135px;
+	top: -126px;
+	transform: scale(1.3);
+}
+
+.reference__img-1 {
+	transform: scale(1.3);
+	right: -150px;
+}
+
+.med-center__img {
+	transform: scale(1.3);
+	right: -110px;
+}
+
+.intro-img img {
+	transform: scale(1.2);
+	top: 38px;
+}
+
+.wrapper {
+	max-width: 1340px;
+}
+
+.feedback__content {
+	max-width: 1140px;
+}
+
+@media screen and (max-width:1580px) {
+	.wrapper {
+		max-width: 1140px;
+	}
+
+	.feedback__content {
+		max-width: 915px;
+	}
+
+	.sing-right {
+		right: -165px;
+		top: -45px;
+		transform: scale(1);
+	}
+
+	.reference__img-1 {
+		transform: scale(1);
+		right: -86px;
+	}
+
+	.med-center__img {
+		transform: scale(1);
+		right: -164px;
+	}
+
+	.intro-img img {
+		transform: scale(1);
+		top: 11px;
+	}
+}
+
 @media screen and (max-width:1439px) {
 	.med-center__img {
 		right: -5vw;
