--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -756,6 +756,7 @@ a {
 			&__inner {
 				padding-right: 13px;
 				position: relative;
+				display: none;
 
 				&::before,
 				&::after {
@@ -1268,6 +1269,10 @@ a {
 .feedback {
 	padding: 97px 0 102px;
 
+	&__arrow.swiper-arrow {
+		top: 100px;
+	}
+
 	&-title {
 		font-weight: 300;
 		font-size: 46px;
@@ -1308,12 +1313,6 @@ a {
 			font-size: 14px;
 			line-height: 16px;
 			color: #000000;
-			height: 77px;
-			display: -webkit-box;
-			-webkit-line-clamp: 5;
-			-webkit-box-orient: vertical;
-			overflow: hidden;
-			text-overflow: ellipsis;
 			margin-bottom: 9px;
 		}
 
@@ -2028,4 +2027,109 @@ a {
 		flex-direction: column;
 		align-items: self-start;
 	}
+}
+
+
+.modal {
+	display: none;
+	position: fixed;
+	top: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 9999;
+	background: rgba(34, 34, 34, 0.6);
+	overflow: auto;
+	box-sizing: border-box;
+
+	&-inner {
+		width: 100%;
+		height: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	&__container {
+		margin: auto auto;
+		max-width: 700px;
+		width: 100%;
+		background: #fff;
+		padding: 40px;
+		border-radius: 4px;
+		max-height: 95vh;
+		overflow: auto;
+
+		img {
+			max-width: 100%;
+			margin: 10px 0;
+		}
+
+		@media screen and (max-width: 480px) {
+			height: 100vh;
+			max-height: initial;
+		}
+
+		&::-webkit-scrollbar {
+			width: 5px;
+			margin-right: 20px;
+		}
+
+		&::-webkit-scrollbar-track {
+			background: #ffffff;
+			border-radius: 5px;
+
+		}
+
+		&::-webkit-scrollbar-thumb {
+			background: #47C8FF;
+			border-radius: 5px;
+
+		}
+
+		.close {
+			background: url("../img/svg/close.svg") no-repeat center center;
+			width: 24px;
+			height: 24px;
+			z-index: 1;
+			cursor: pointer;
+		}
+	}
+
+	&__header {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		gap: 16px;
+		margin-bottom: 24px;
+	}
+
+	&__body {
+		font-size: 16px;
+		line-height: 160%;
+		font-family: "Roboto", sans-serif;
+	}
+
+	&__title {
+		font-weight: 300;
+		font-size: 26px;
+		line-height: 120%;
+		color: #000000;
+	}
+
+
+}
+
+.list {
+	list-style: disc;
+	padding-left: 1rem;
+	margin: 10px 0;
+	font-weight: 300;
+}
+
+h4 {
+	font-weight: 300;
+	font-size: 22px;
+	line-height: 130%;
+	margin: 20px 0;
 }
