--- a/assets/template/page-header.html
+++ b/assets/template/page-header.html
@@ -3,7 +3,8 @@
         <div class="wrapper">
             <div class="header__top-wrapper">
                 <a href="#" class="header__logo">
-                    <img src="img/logo.jpg" alt="">
+                    <img src="img/logo-big.jpg" alt="" class="logo-big">
+                    <img src="img/logo.jpg" alt="" class="logo-small">
                 </a>
                 <div class="header__top-inner">
                     <div class="header__schedule">
@@ -103,9 +104,9 @@
                     <a href="#contact" class="header__menu-link">Контакты</a>
                 </li>
             </ul>
-            <button class="header__contact">
+            <a href="#sing" class="header__contact">
                 Записаться на прием
-            </button>
+            </a>
         </div>
     </div>
     <div class="header-mobile__menu">
@@ -133,9 +134,9 @@
                     <a href="#contact" class="header__menu-link">Контакты</a>
                 </li>
             </ul>
-            <div class="header__contact">
+            <a href="#sing" class="header__contact">
                 Записаться на прием
-            </div>
+            </a>
         </div>
 
         <div class="header__top-right">
