--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -458,6 +458,10 @@ a {
 				line-height: 160%;
 				color: #000000;
 			}
+			&-title,&-desc{
+				position: relative;
+				z-index: 2;
+			}
 		}
 
 		&__primary {
@@ -654,7 +658,7 @@ a {
 		line-height: 120%;
 		height: 83px;
 		display: -webkit-box;
-		-webkit-line-clamp: 4;
+		-webkit-line-clamp: 5;
 		-webkit-box-orient: vertical;
 		overflow: hidden;
 		text-overflow: ellipsis;
