--- a/assets/template/page-header.html
+++ b/assets/template/page-header.html
@@ -2,7 +2,7 @@
     <div class="header__top">
         <div class="wrapper">
             <div class="header__top-wrapper">
-                <a href="#" class="header__logo">
+                <a href="/" class="header__logo">
                     <img src="img/logo-big.jpg" alt="" class="logo-big">
                     <img src="img/logo.jpg" alt="" class="logo-small">
                 </a>
