--- a/assets/template/head.html
+++ b/assets/template/head.html
@@ -29,5 +29,9 @@
 	
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/main.min.css">
+
+	<link rel="shortcut icon" href="/local/templates/vitanew/img/fav.png" type="image/x-icon">
+
 </head>
 <body @@if (bodyclass) { class=@@bodyclass }>
+
